def show todolist controller

--- a/app/views/todo_list/index.html.erb
+++ b/app/views/todo_list/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Index Page! </h1>
 
-<% @todo_lists.each do |todo_list| %>
+<% @todo_list.each do |todo_list| %>
     <li><%=todo_list.title%></li>
 <% end %>
