--- a/app/views/todo_list/new.html.erb
+++ b/app/views/todo_list/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a New Todo</h1>
-<%= form_for @todo do |f| %>
+<%= form_for @todo_list do |f| %>
 
   <%= label_tag(:title, "Title:") %>
   <%= f.text_field :title %></br>
