--- a/app/views/todo_list/index.html.erb
+++ b/app/views/todo_list/index.html.erb
@@ -2,6 +2,9 @@
 
 <%= link_to "New Todo Item", new_todo_list_path %>
 
-<% @todo_list.each do |todo_list| %>
-    <li><%= link_to todo_list.title, todo_list_path(todo_list.id)%></li>
+<% @todo_lists.each do |todo_list| %>
+    <li>
+      <%= link_to todo_list.title, todo_list_path(todo_list.id) %>
+      <%= link_to "edit", edit_todo_list_path(todo_list[:id]) %>
+    </li>
 <% end %>
