--- a/app/views/todo_list/show.html.erb
+++ b/app/views/todo_list/show.html.erb
@@ -2,4 +2,4 @@
 <p>Title: <%= @todo_list['title']%></p>
 <p>Description: <%= @todo_list['description']%></p>
 
-<%= link_to "Back To Todo List",todo_list_path%>
+<%= link_to "Back To Todo List", root_path%>
